# mypng

./: .clang-format  CMakeLists.txt  git_use_exmp.txt  run.sh  test.cpp  vcpkg.json
.cache/clangd/index/: imread.cpp.8E19DF805E59241E.idx  imread.h.28B014F470FDE8F8.idx  imread.hpp.0A848B7567AA7EAF.idx  imsave.cpp.3C1B47FC19CC3C88.idx  imsave.hpp.67228AFF10DA0550.idx  imwrite.cpp.CB07F244DFD2641B.idx  imwrite.hpp.19D8D4295EEF36FF.idx  stb_image_write.h.C6B2AFCD590D493F.idx  test.cpp.5CC9B2D406CB54F5.idx  test.cpp.F2E6357222EBC1C7.idx
exe/: config.sh
src/: imread.cpp  imread.h  imread.hpp  imsave.cpp  imsave.hpp
